--- a/public/style.css
+++ b/public/style.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #f5f5f5;
+    background-color: #ffffff;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -30,13 +30,16 @@ h2, p, a {
 
 .card > h2 {
     font-weight: 500;
+    font-size: 1.5rem;
 }
 
 .card > p {
     font-weight: 300;
+    font-size: 1.1rem;
 }
 
 .card > a {
+    margin-top: auto;
     font-weight: 400;
 }
 
@@ -46,27 +49,66 @@ h2, p, a {
     grid-template-columns: repeat(2, 1fr);
     justify-items: center;
     align-items: center;
-    gap: 20px;
+    gap: 40px;
 }
 
 .card {
     width: 500px;
-    height: 550px;
+    height: 600px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    padding: 20px;
+    gap: 10px;
+    padding: 30px 10px;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 4px 8px 15px 0px rgba(0,0,0,0.08);
+    -moz-box-shadow: 4px 8px 15px 0px rgba(0,0,0,0.08);
+    box-shadow: 4px 8px 15px 0px rgba(0,0,0,0.08);
 }
 
 .card > img {
-    width: 80%;
-    height: 50%;
+    width: 90%;
+    height: 40%;
+    object-fit: cover;
     border-radius: 10px;
+    -webkit-box-shadow: 8px 8px 15px 0px rgba(0,0,0,0.15);
+    -moz-box-shadow: 8px 8px 15px 0px rgba(0,0,0,0.15);
+    box-shadow: 8px 8px 15px 0px rgba(0,0,0,0.15);
 }
 
 .card > p, h2 {
-    width: 80%;
+    width: 90%;
+}
+
+.card:nth-child(4n+1) {
+    background-color: #FFF2D7;
+}
+
+.card:nth-child(4n+2) {
+    background-color: #F2FBFC;
+}
+
+.card:nth-child(4n+3) {
+    background-color: #FFEFEF;
+}
+
+.card:nth-child(4n) {
+    background-color: #F2EFE5;
+}
+
+/* footer */
+
+.footer__div {
+    width: 100%;
+    min-height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer__div > p {
+    font-weight: 300;
+    font-size: 0.8rem;
+    color: #C3C3C3;
 }
