--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,5 @@
+/* global settings */
+
 * {
     margin: 0;
     padding: 0;
@@ -19,16 +21,33 @@ h1 {
     font-weight: 300;
 }
 
-.header__div>h1 {
-    text-align: center;
-    margin: 40px 0;
-}
-
 h2,
 p,
 a {
     font-family: "Kanit", sans-serif;
 }
+
+/* header styling */
+
+
+.header__div>h1 {
+    text-align: center;
+    margin: 40px 0;
+}
+
+.header__div>img {
+    width: 50px;
+    height: 50px;
+}
+
+.header__div {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* card styling */
 
 .card>h2 {
     font-weight: 500;
@@ -106,17 +125,27 @@ h2 {
     width: 100%;
     min-height: 100px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 10px;
+}
+
+.footer__div>img {
+    margin-top: 40px;
+    width: 40px;
+    height: 40px;
 }
 
 .footer__div>p {
     font-weight: 300;
     font-size: 0.8rem;
     color: #C3C3C3;
+    margin: 20px 0;
 }
 
 /* Add spacing between chat-container and cards-container */
+
 main {
     display: flex;
     flex-direction: column;
